[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://images/incognito_avatar.png" type="Texture" id=2]
[ext_resource path="res://ScoreLine.gd" type="Script" id=3]
[ext_resource path="res://images/white_avatar_mask.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 1 )

[node name="ScoreLine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1689.0
script = ExtResource( 3 )

[node name="BkGnd" type="ColorRect" parent="."]
light_mask = 2
margin_top = 10.0
margin_right = 500.0
margin_bottom = 90.0
color = Color( 0.74902, 0.0392157, 0.188235, 1 )

[node name="LabelName" type="Label" parent="."]
margin_left = 20.0
margin_top = 5.0
margin_right = 229.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "abracadabra"
valign = 1
clip_text = true

[node name="LabelScore" type="Label" parent="."]
margin_left = 20.0
margin_top = 39.0
margin_right = 218.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "999999"
align = 1
valign = 1

[node name="LabelMultiplier" type="Label" parent="."]
margin_left = 6.0
margin_top = 84.0
margin_right = 255.0
margin_bottom = 166.0
custom_colors/font_color = Color( 0.94902, 0.94902, 0.94902, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 3 )
text = "x999"
align = 1
valign = 1

[node name="Avatar" type="Sprite" parent="."]
position = Vector2( 400, -20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 0, 32 )

[node name="Avamask" type="Light2D" parent="."]
position = Vector2( 400, 40 )
texture = ExtResource( 4 )
texture_scale = 2.2
mode = 3
